test_istio/prod_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prod
spec: {}
status: {}
