test_istio/deployment.yaml

apiVersion: v1
kind: Service
metadata: 
   labels: 
      app: hello
   name: hello
spec: 
   selector: 
      app: hello
   ports:
      - port: 80
        protocol: TCP
        targetPort: 3000
