test_istio/gateway.yaml
apiVersion: networking.istio.io/v1beta3
kind: Gateway
metadata:
    name: gateway

spec:
    selector:
        istio: ingressgateway

    servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - '*'
