test_istio/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: istio-virtual-svc

spec:
    hosts:
    - "deep.com"
    - "app1.prod.svc.cluster.local"

    gateways:
    - istio-ingress-gateway

    http:
    - name: virtual-service-routes
      route:
      - destination:
           host: app1.svc.prod.svc.cluster.local
           subset: app1-service-subset
        weight: 100

      - destination:
           host: app2.svc.prod.svc.cluster.local
           subset: app2-service-subset
        weight: 0
---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: istio-destination-rule2
spec:
    host: app1.prod.svc.cluster.local
    subsets:
    - name: app1-service-subset
      labels:
         app: app
         version: v2
         chapter: istio
         topic: traffic-management
      trafficPolicy:
         loadBalancer:
             simple: ROUND_ROBIN

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
    name: istio-destination-rule
spec:
    host: app2.prod.svc.cluster.local
    subsets:
    - name: app2-service-subset
      labels:
         app: app
         version: v2
         chapter: istio
         topic: traffic-management
      trafficPolicy:
         loadBalancer:
             simple: ROUND_ROBIN

---
