test_istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: hello
spec: 
    hosts: 
      - '*'
    gateways:
      - gateway
    http: 
    - name: virtual-service-routes
      route: 
        - destination:
              host: hello.default.svc.cluster.local
              port:
                 number: 80
          weight: 50
    - name: virtual-service-routes2
      route: 
        - destination:
              host: hello1.default.svc.cluster.local
              port:
                 number: 80
          weight: 50
